// ========================================================
// 🪙 VELOTRADE SYSTEM DATABASE DIAGRAM (DBML FORMAT)
// Copy-paste this entire code directly into https://dbdiagram.io
// Designed with 💖 by Grace for Sếp Thiên Ân
// ========================================================

// SECTION 1: USER MANAGEMENT
Table users {
  id int [pk, increment, note: 'Unique identifier for both customers and admins']
  email varchar(255) [unique, not null, note: 'Login credential']
  password_hash varchar(255) [not null]
  full_name varchar(100) [not null]
  role varchar(20) [default: 'customer', note: 'customer, admin, moderator']
  kyc_status varchar(20) [default: 'unverified', note: 'unverified, pending, verified, rejected']
  status varchar(20) [default: 'active', note: 'active, suspended, inactive']
  two_factor_secret varchar(100)
  is_two_factor_enabled boolean [default: false]
  avatar_url varchar(500)
  created_at timestamp
  updated_at timestamp
}

Table audit_logs {
  id int [pk, increment]
  admin_id int [not null]
  action varchar(255) [not null, note: 'e.g. SUSPEND_USER, APPROVE_WITHDRAWAL, UPDATE_FEE']
  target_table varchar(100)
  target_id int
  ip_address varchar(45) [not null]
  user_agent varchar(500)
  payload json [note: 'Before/after value delta payloads']
  created_at timestamp
}

// SECTION 2: COIN CMS & METADATA (20+ HOT COIN PAGES)
Table coins {
  id int [pk, increment]
  symbol varchar(15) [unique, not null, note: 'e.g., BTC, ETH, SOL, USDT']
  name varchar(100) [not null, note: 'e.g., Bitcoin, Ethereum, Solana, Tether']
  category varchar(30) [not null, note: 'layer1, layer2, defi, meme, web3, ai_depin, stablecoin']
  logo_url varchar(500)
  description text [not null, note: 'SEO Markdown text used dynamically on each of the 21+ coin details page']
  website_url varchar(255)
  whitepaper_url varchar(255)
  circulating_supply decimal(36,6)
  max_supply decimal(36,6) [note: 'NULL represents infinite supply']
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table coin_price_history {
  id bigint [pk, increment]
  coin_id int [not null]
  timeframe varchar(10) [not null, note: '1m, 5m, 15m, 1h, 4h, 1d']
  open_price decimal(36,18) [not null]
  high_price decimal(36,18) [not null]
  low_price decimal(36,18) [not null]
  close_price decimal(36,18) [not null]
  volume decimal(36,18) [not null]
  timestamp bigint [not null, note: 'Unix Epoch timeframe stamp']
}

Table coin_news {
  id int [pk, increment]
  coin_id int [not null]
  title varchar(255) [not null]
  content text [not null]
  source_name varchar(100) [default: 'VeloTrade Editorial']
  image_url varchar(500)
  created_at timestamp
}

// SECTION 3: CORE FINANCIALS (MARKETS & WALLETS)
Table markets {
  id int [pk, increment]
  base_coin_id int [not null, note: 'ID of base currency, e.g. BTC']
  quote_coin_id int [not null, note: 'ID of quote currency, e.g. USDT']
  symbol varchar(30) [unique, not null, note: 'e.g. BTC_USDT']
  min_order_size decimal(36,18)
  max_order_size decimal(36,18)
  maker_fee_percent decimal(5,4) [default: 0.0010]
  taker_fee_percent decimal(5,4) [default: 0.0015]
  is_trading_enabled boolean [default: true]
  created_at timestamp
}

Table wallets {
  id int [pk, increment]
  user_id int [not null]
  coin_id int [not null]
  balance decimal(36,18) [default: 0.0]
  locked_balance decimal(36,18) [default: 0.0, note: 'Frozen balances locked in active orders']
  created_at timestamp
  updated_at timestamp
}

Table deposits_withdrawals {
  id int [pk, increment]
  user_id int [not null]
  wallet_id int [not null]
  type varchar(20) [not null, note: 'deposit, withdrawal']
  amount decimal(36,18) [not null]
  fee decimal(36,18) [default: 0.0]
  address varchar(255) [not null, note: 'External blockchain receiving/sending address']
  tx_hash varchar(255) [note: 'Null for pending withdrawals']
  status varchar(20) [default: 'pending', note: 'pending, processing, completed, failed, rejected']
  approved_by_admin_id int [note: 'Admin audit link']
  processed_at timestamp
  created_at timestamp
}

// SECTION 4: TRADING ENGINE & ORDER BOOK
Table orders {
  id int [pk, increment]
  user_id int [not null]
  market_id int [not null]
  side varchar(10) [not null, note: 'buy, sell']
  type varchar(10) [not null, note: 'limit, market']
  price decimal(36,18) [not null]
  quantity decimal(36,18) [not null]
  filled_quantity decimal(36,18) [default: 0.0]
  status varchar(20) [default: 'pending', note: 'pending, partially_filled, filled, cancelled']
  created_at timestamp
  updated_at timestamp
}

Table matched_trades {
  id int [pk, increment]
  market_id int [not null]
  maker_order_id int [not null]
  taker_order_id int [not null]
  price decimal(36,18) [not null]
  quantity decimal(36,18) [not null]
  maker_fee decimal(36,18) [not null]
  taker_fee decimal(36,18) [not null]
  executed_at timestamp
}

// SECTION 5: CUSTOMER SUPPORT & SYSTEM SETTINGS
Table support_tickets {
  id int [pk, increment]
  user_id int [not null]
  subject varchar(255) [not null]
  category varchar(50) [not null, note: 'DEPOSIT, TRADING, KYC, OTHER']
  status varchar(20) [default: 'open', note: 'open, assigned, resolved, closed']
  assigned_admin_id int
  created_at timestamp
  updated_at timestamp
}

Table site_settings {
  id int [pk, increment]
  key varchar(100) [unique, not null]
  value text [not null]
  description varchar(255)
  updated_by int
  updated_at timestamp
}

// SECTION 6: ENTITY RELATIONSHIPS (FOREIGN KEYS)
Ref: audit_logs.admin_id > users.id [delete: cascade]
Ref: coin_price_history.coin_id > coins.id [delete: cascade]
Ref: coin_news.coin_id > coins.id [delete: cascade]
Ref: markets.base_coin_id > coins.id [delete: restrict]
Ref: markets.quote_coin_id > coins.id [delete: restrict]
Ref: wallets.user_id > users.id [delete: cascade]
Ref: wallets.coin_id > coins.id [delete: restrict]
Ref: deposits_withdrawals.user_id > users.id [delete: cascade]
Ref: deposits_withdrawals.wallet_id > wallets.id [delete: cascade]
Ref: deposits_withdrawals.approved_by_admin_id > users.id [delete: set null]
Ref: orders.user_id > users.id [delete: cascade]
Ref: orders.market_id > markets.id [delete: cascade]
Ref: matched_trades.market_id > markets.id [delete: cascade]
Ref: matched_trades.maker_order_id > orders.id [delete: cascade]
Ref: matched_trades.taker_order_id > orders.id [delete: cascade]
Ref: support_tickets.user_id > users.id [delete: cascade]
Ref: support_tickets.assigned_admin_id > users.id [delete: set null]
Ref: site_settings.updated_by > users.id [delete: set null]
